Tried out the Authentication.

--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,5 @@ MYSQL_PORT=<your_mysql_port> # e.g., 3306
 MYSQL_DATABASE=<your_mysql_database> # e.g., db_name
 MYSQL_USER=<your_mysql_user> # e.g., root
 MYSQL_PASSWORD=<your_mysql_password> # e.g., root
+GOOGLE_CLIENT_ID=<your OAuth client ID>
+# GOOGLE_CLIENT_SECRET=<your OAuth client secret>
