--- a/smooth-ocean/.env.template
+++ b/smooth-ocean/.env.template
@@ -5,3 +5,5 @@
     GOOGLE_CLOUD_LOCATION=<your location>
     GOOGLE_GENAI_MODEL=<your model name>
     TOOLSET_LINK=<link to your toolset server>
+    GOOGLE_CLIENT_ID=<your OAuth client ID>
+    GOOGLE_CLIENT_SECRET=<your OAuth client secret>
