--- a/tools.yaml
+++ b/tools.yaml
@@ -1,7 +1,7 @@
-# authServices:
-#   my-google-auth:
-#     kind: google
-#     clientId: ${YOUR_GOOGLE_CLIENT_ID}
+authServices: # https://googleapis.github.io/genai-toolbox/resources/authservices/
+  my-google-auth:
+    kind: google
+    clientId: ${YOUR_GOOGLE_CLIENT_ID}
 
 sources: # https://googleapis.github.io/genai-toolbox/resources/sources/
   my-mysql:
@@ -18,6 +18,8 @@ tools: # https://googleapis.github.io/genai-toolbox/resources/tools/
         kind: mysql-execute-sql
         source: my-mysql
         description: Use this tool to execute sql statement.
+        authRequired:
+          - my-google-auth
     get_tables:
         kind: mysql-sql
         source: my-mysql
@@ -28,9 +30,6 @@ tools: # https://googleapis.github.io/genai-toolbox/resources/tools/
         #   FROM information_schema.tables
         #   WHERE table_schema = DATABASE();
         description: Get all tables in the MySQL database
-        # authRequired:
-        #     - my-google-auth
-        #     - other-auth-service
     get_column_names: # https://googleapis.github.io/genai-toolbox/resources/tools/mysql/mysql-sql/
         kind: mysql-sql
         source: my-mysql
