Commited Changes to come and Fix.

--- a/smooth-ocean/.env.template
+++ b/smooth-ocean/.env.template
@@ -7,3 +7,4 @@
     TOOLSET_LINK=<link to your toolset server>
     GOOGLE_CLIENT_ID=<your OAuth client ID>
     GOOGLE_CLIENT_SECRET=<your OAuth client secret>
+    GITHUB_PERSONAL_ACCESS_TOKEN=<your GitHub PAT>
