--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,16 @@
 **/*__pycache__*/
 **/.env
-**/img_content
-**/uploads
-/venv-linux
-/venv-windows
 **/*ignore*/
 /ignore-notes.md
 /ignore.bash
-**/*.keras
+/venv-linux
+/toolbox
+/venv-windows
+/toolbox.exe
 **/serviceAccountKey.json
 **/gcp_service_account.json
 **/firebase_credentials.json
 **/firebaseConfig.json
-/toolbox.exe
-/toolbox
-/client_secret.json
+**/client_secret.json
+**/*.keras
+/server_scripts/mcp_server_activity.log
