Remove custom ADK patches and update google-adk version
Deleted the custom_adk_patches.py file and related references, as custom timeout logic is no longer needed. Updated google-adk to version 1.12.0 in requirements.txt. Commented out OAuth2 authentication and authServices configuration in agent.py and tools.yaml, simplifying toolset initialization and removing custom authentication logic. Updated .gitignore to exclude the custom_utils directory.

--- a/tools.yaml
+++ b/tools.yaml
@@ -1,7 +1,7 @@
-authServices: # https://googleapis.github.io/genai-toolbox/resources/authservices/
-  my-google-auth:
-    kind: google
-    clientId: ${YOUR_GOOGLE_CLIENT_ID}
+# authServices: # https://googleapis.github.io/genai-toolbox/resources/authservices/
+#   my-google-auth:
+#     kind: google
+#     clientId: ${YOUR_GOOGLE_CLIENT_ID}
 
 sources: # https://googleapis.github.io/genai-toolbox/resources/sources/
   my-mysql:
@@ -18,8 +18,8 @@ tools: # https://googleapis.github.io/genai-toolbox/resources/tools/
         kind: mysql-execute-sql
         source: my-mysql
         description: Use this tool to execute sql statement.
-        authRequired:
-          - my-google-auth
+        # authRequired:
+        #   - my-google-auth
     get_tables:
         kind: mysql-sql
         source: my-mysql
