Add references.md and update comments in code and config
Added a new references.md file to document the source of load_instruction_from_file(). Updated comments in enviroment_interaction.py and tools.yaml to include relevant source URLs. Minor addition of a commented LinkedIn embed in README.md.

--- a/tools.yaml
+++ b/tools.yaml
@@ -14,7 +14,7 @@ sources: # https://googleapis.github.io/genai-toolbox/resources/sources/
     # queryTimeout: 30s # Optional: query timeout duration
 
 tools: # https://googleapis.github.io/genai-toolbox/resources/tools/
-    execute_sql_tool:
+    execute_sql_tool: # https://googleapis.github.io/genai-toolbox/resources/tools/mysql/mysql-execute-sql/
         kind: mysql-execute-sql
         source: my-mysql
         description: Use this tool to execute sql statement.
