Add new environment variables to .env.template
Added DJANGO_SERVER_URL and BASE_PATH to the .env.template file to support Django server configuration and project base path specification.

--- a/smooth-ocean/.env.template
+++ b/smooth-ocean/.env.template
@@ -5,6 +5,8 @@
     GOOGLE_CLOUD_LOCATION=<your location>
     GOOGLE_GENAI_MODEL=<your model name>
     TOOLSET_LINK=<link to your toolset server>
+    DJANGO_SERVER_URL=<your Django server URL>
     GOOGLE_CLIENT_ID=<your OAuth client ID>
     GOOGLE_CLIENT_SECRET=<your OAuth client secret>
     GITHUB_PERSONAL_ACCESS_TOKEN=<your GitHub PAT>
+    BASE_PATH=<your base path of Django project>
