Refactor smooth-ocean to DevTools and update imports
Renamed the smooth-ocean directory and its contents to DevTools, updating all relevant file paths and imports. Added a new scrapper prompt and an empty media_parser_tools.py file. Updated .gitignore to reflect new DevTools paths and files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+DevTools/selenium_tools.py
+DevTools/auth_tools.py
+DevTools/custom_utils/prompts/scrapper.prompt
 **/*__pycache__*/
 **/.env
 **/*ignore*/
@@ -13,4 +16,4 @@
 **/firebaseConfig.json
 **/client_secret.json
 **/*.keras
-smooth-ocean/server_scripts/
+DevTools/server_scripts/
