Add Firebase/Google login UI and update requirements
Introduces UI/login.py for Streamlit-based authentication via Firebase and Google OAuth, supporting both REST and Admin SDK flows. Updates .gitignore to ignore new credential and plan files, and adds google-auth-oauthlib and firebase-admin to requirements.txt for authentication support.

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,8 @@
 /toolbox
 /venv-windows
 /toolbox.exe
-**/serviceAccountKey.json
-**/gcp_service_account.json
-**/firebase_credentials.json
-**/firebaseConfig.json
 **/client_secret.json
+**/service-account.json
 **/*.keras
 DevTools/server_scripts/
+plan.txt
