Add pipeline planner agents, tools, and admin approval logic
Introduces a modular agent-based pipeline planner with YAML configurations for agents, flows, and tools. Adds Python implementations for database, knowledge base, and system analysis tools, as well as admin approval callbacks for sensitive operations. Updates .gitignore for Firebase files, removes obsolete Streamlit config, and revises requirements.txt to clarify installed and pending packages.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 **/*__pycache__*/
 **/.env
+**/.firebaserc
 **/*ignore*/
 /ignore-notes.md
 /ignore.bash
@@ -9,6 +10,7 @@
 /toolbox.exe
 **/client_secret.json
 **/service-account.json
+**/firebase.json
 **/*.keras
 DevTools/server_scripts/
 UI/login.zip
